manifests/argocd/argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      # Mount SA token for Kubernets auth
      # Note: In 2.4.0 onward, there is a dedicated SA for repo-server (not default)
      # Note: This is not fully supported for Kubernetes < v1.19
      automountServiceAccountToken: true

      # Each of the embedded YAMLs inside cmp-plugin ConfigMap will be mounted into it's respective plugin sidecar
      volumes:
        - configMap:
            name: cmp-plugin
          name: cmp-plugin
        - name: custom-tools
          emptyDir: {}

      # Download tools
      containers:
        - name: avp-helm
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.12.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp

            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-helm.yaml
              name: cmp-plugin

            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin

        # argocd-vault-plugin with Kustomize
        - name: avp-kustomize
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.12.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp

            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-kustomize.yaml
              name: cmp-plugin

            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin

        # argocd-vault-plugin with plain YAML
        - name: avp
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.12.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp

            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp.yaml
              name: cmp-plugin

            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
